[gd_scene load_steps=5 format=3 uid="uid://fafe387i2dki"]

[ext_resource type="Script" uid="uid://dtntg5kv6jfk0" path="res://Scenes/objects/actionables/lever.gd" id="1_ymqxt"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="2_emci5"]
[ext_resource type="PackedScene" uid="uid://4b3ll6mxdyvd" path="res://assets/meshes/blender/lever.blend" id="3_emci5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5vpai"]
radius = 0.11476315

[node name="Lever" type="Node3D" node_paths=PackedStringArray("anim_player")]
script = ExtResource("1_ymqxt")
anim_player = NodePath("lever/AnimationPlayer")

[node name="PickableObject" parent="." instance=ExtResource("2_emci5")]
collision_layer = 1024
collision_mask = 196608
freeze = true
freeze_mode = 0
picked_up_layer = 0

[node name="CollisionShape3D" parent="PickableObject" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6555917, 0)
shape = SubResource("SphereShape3D_5vpai")

[node name="lever" parent="." instance=ExtResource("3_emci5")]
transform = Transform3D(-9.616506e-09, 0, -0.22, 0, 0.22, 0, 0.22, 0, -9.616506e-09, 0, 0, 0)

[node name="Skeleton3D" parent="lever/Armature" index="0"]
bones/0/rotation = Quaternion(0, 0, -0.014902946, 0.999889)

[connection signal="picked_up" from="PickableObject" to="." method="_on_pickable_object_picked_up"]
[connection signal="released" from="PickableObject" to="." method="_on_pickable_object_released"]

[editable path="PickableObject"]
[editable path="lever"]
